--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Building the Future, App by App</h1>
+            <h1>Application development, focusing on cutting-edge mobile challenges</h1>
             <hr>
+            <p><b>Building the Future, App by App</b></p>
             <p>LeanMeanTech is building apps for the mobile world, the world
 preparing for the Internet of Things (IoT), the sharing economy, the world of wearable tech, the world at the core of modern business.
 </p>
