Some low hanging fruit. Header_logo is in there, but the image is commented out, due to not properly handling the responsive case with low screen width

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,11 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Application development, focusing on cutting-edge mobile challenges</h1>
-            <hr>
-            <p><b>Building the Future, App by App</b></p>
-            <p>LeanMeanTech is building apps for the mobile world, the world
-preparing for the Internet of Things (IoT), the sharing economy, the world of wearable tech, the world at the core of modern business.
-</p>
-            <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+            <h1>Building the Future, App By App</h1>
+		<hr>
+            
+		<p>Application development, focusing on cutting-edge mobile challenges.</p>
+		<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
         </div>
     </div>
 </header>
