--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -8,7 +8,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="#page-top">Start Bootstrap</a>
+            <a class="navbar-brand page-scroll" href="#page-top">LeanMeanTech<!--<img alt="LeanMeanTech" height="36" src="img/header_logo.png">--></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
