Theming + Landing WIP

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,8 +6,12 @@
                 <hr class="light">
                 <p class="text-faded">
 LeanMeanTech is more than our name: it is our guiding principal. We develop higher quality software solutions faster and more cost-effectively than other providers.
-</p>                <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+</p>                
+            <!--
+            <a href="#" class="btn btn-default btn-xl">Get Started!</a>
+            -->
             </div>
+            <a href="#about" class="header-footer page-scroll"></a>
         </div>
     </div>
 </section>
