--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,8 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand page-scroll" href="#page-top">
-                <img alt="LeanMeanTech" height="25" src="{{page.leadingpath}}img/header_logo_white.png" class="normal">
-                <img alt="LeanMeanTech" height="25" src="{{page.leadingpath}}img/header_logo_theme.png" class="inverse">
+                <div class="navbar-brand-image" title="LeanMeanTech"></div>
             </a>
         </div>
 
