--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,18 @@
 <header>
     <div class="header-content">
         <div class="header-content-inner">
-            <h1>Building the Future, App By App</h1>
-		<hr>
-            
+            <span class="big">Building the Future,</span><br />
+            <span class="big" id="header-type-effect">&nbsp;</span>
+                
 		<p>Application development, focusing on cutting-edge mobile challenges.</p>
-		<a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+        
+        <div class="spacer"></div>
+        
+        <!--
+		<a href="#about" class="btn btn-primary btn-xl btn-flat page-scroll">Find Out More</a>
+        -->
         </div>
     </div>
+    
+    <a href="#about" class="header-footer page-scroll"></a>
 </header>
