--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,7 +6,7 @@
 
 <!-- Plugin JavaScript -->
 <script src="{{page.leadingpath}}js/jquery.easing.min.js"></script>
-<script src="{{page.leadingpath}}js/jquery.fittext.js"></script>
+<!-- <script src="{{page.leadingpath}}js/jquery.fittext.js"></script> -->
 <script src="{{page.leadingpath}}js/wow.min.js"></script>
 
 <!-- Custom Theme JavaScript -->
