--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -5,16 +5,14 @@
 
 <body id="page-top">
   {% include nav.html %}
-  {% include header.html %}
-  {% include about.html %}
-  {% include testimony-1.html %}
-  {% include about.html %}
   {% comment %}
+  {% include header.html %}
+  {% include call-to-action.html %}
   {% include services.html %}
   {% include portfolio.html %}
-  {% include aside.html %} 
-  {% endcomment %}
+  {% include aside.html %}
   {% include contact.html %}
+  {% endcomment %}
   {% include scripts.html %}
 </body>
 
