Added HomeAway Testimony

--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -1,7 +1,7 @@
-<section class="bg-dark" id="testimony">
+<section class="bg-white relative" id="testimony">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 text-center">
+            <div class="col-md-5 col-md-offset-2 testimony">
                 <p class="text-faded">
                     ￼￼LeanMeanTech’s deep platform expertise was invaluable to us 
                     from design through implementation and release of our apps. 
@@ -13,6 +13,14 @@
                     guys was a huge benefit.
                 </p>
             </div>
+            <div class="col-md-3 col-md-offset-0 signature">
+                <h2>Alex Devine</h2>
+                <h5>Director of Engineering, Mobile</h5>
+                <img src="{{page.leadingpath}}img/external/logo-homeaway.svg" />
+            </div>
+            
+            <div class="spacer"></div>
         </div>
     </div>
+    <a href="#testimony" class="section-footer inverse page-scroll"></a>
 </section>
