--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -7,7 +7,7 @@
   {% include nav.html %}
   {% include header.html %}
   {% include about.html %}
-  {% include testimony-1.html %}
+  {% include testimony-homeaway.html %}
   {% include about.html %}
   {% comment %}
   {% include services.html %}
