--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,17 +1,19 @@
-<section class="bg-primary" id="about">
+<section class="bg-primary relative" id="about">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
                 <h2 class="section-heading">Your Vision Realized</h2>
                 <hr class="light">
                 <p class="text-faded">
-LeanMeanTech is more than our name: it is our guiding principal. We develop higher quality software solutions faster and more cost-effectively than other providers.
-</p>                
+                    LeanMeanTech is more than our name: it is our guiding 
+                    principal. We develop higher quality software solutions faster 
+                    and more cost-effectively than other providers.
+                </p>                
             <!--
             <a href="#" class="btn btn-default btn-xl">Get Started!</a>
             -->
             </div>
-            <a href="#about" class="header-footer page-scroll"></a>
         </div>
     </div>
+    <a href="#testimony" class="section-footer page-scroll"></a>
 </section>
