Logo + Font Tweaks + Stub Contact + Stub Post-Testimony

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,5 +14,5 @@
         </div>
     </div>
     
-    <a href="#about" class="header-footer page-scroll"></a>
+    <a href="#about" class="header-footer extra-bottom page-scroll"></a>
 </header>
