--- a/_sass/_mixins.scss
+++ b/_sass/_mixins.scss
@@ -60,6 +60,10 @@
 	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
 }
 
+@mixin sans-serif-header-font() {
+    font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+
 @mixin serif-font()
 {
 	font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
