--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -8,7 +8,7 @@
   {% include header.html %}
   {% include about.html %}
   {% include testimony-homeaway.html %}
-  {% include about.html %}
+  {% include about-followup.html %}
   {% comment %}
   {% include services.html %}
   {% include portfolio.html %}
