WIP Updated Testimony Design + Added Subtle Patterns

--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -1,4 +1,4 @@
-<section class="bg-white relative" id="testimony">
+<section class="bg-white relative external-homeaway notop" id="testimony">
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-md-offset-2 testimony">
@@ -13,7 +13,7 @@
                     guys was a huge benefit.
                 </p>
             </div>
-            <div class="col-md-3 col-md-offset-0 signature">
+            <div class="col-md-3 col-md-offset-0 signature wow slideInDown">
                 <h2>Alex Devine</h2>
                 <h5>Director of Engineering, Mobile</h5>
                 <img src="{{page.leadingpath}}img/external/logo-homeaway.svg" />
@@ -22,5 +22,5 @@
             <div class="spacer"></div>
         </div>
     </div>
-    <a href="#testimony" class="section-footer inverse page-scroll"></a>
+    <a href="#testimony" class="section-footer page-scroll"></a>
 </section>
