WIP Mobile Layout Tweaks

--- a/_includes/about-followup.html
+++ b/_includes/about-followup.html
@@ -2,18 +2,18 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
-                <h2 class="section-heading">Your Vision Realized</h2>
+                <h2 class="section-heading">Keys to Success</h2>
                 <hr class="light">
                 <p class="text-faded">
-                    LeanMeanTech is more than our name: it is our guiding 
-                    principal. We develop higher quality software solutions faster 
-                    and more cost-effectively than other providers.
+                    The keys to success in hiring a software engineering firm 
+                    lie in finding a trustworthy, experienced, and skilled 
+                    partner who can turn your business objectives into the 
+                    software that you need.
                 </p>                
-            <!--
-            <a href="#" class="btn btn-default btn-xl">Get Started!</a>
-            -->
+                <a href="#contact" class="btn btn-default btn-xl page-scroll">Get in Touch</a>
+                <div class="spacer"></div> 
             </div>
         </div>
     </div>
-    <a href="#testimony" class="section-footer page-scroll"></a>
+    <a href="#portfolio" class="section-footer page-scroll"></a>
 </section>
