--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -1,4 +1,4 @@
-<section class="bg-white relative external-homeaway notop" id="testimony">
+<section class="bg-white relative external-homeaway notop nobottom-xs" id="testimony">
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-md-offset-2 testimony">
@@ -17,10 +17,11 @@
                 <h2>Alex Devine</h2>
                 <h5>Director of Engineering, Mobile</h5>
                 <img src="{{page.leadingpath}}img/external/logo-homeaway.svg" />
+                
+                <div class="spacer"></div>
+                <a href="#about-followup" class="section-footer block page-scroll inverse visible-xs"></a>
             </div>
-            
-            <div class="spacer"></div>
         </div>
     </div>
-    <a href="#testimony" class="section-footer page-scroll"></a>
+    <a href="#about-followup" class="section-footer page-scroll hidden-xs"></a>
 </section>
