Updated Patterns Path

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -50,13 +50,13 @@ p {
 }
 
 .bg-light {
-    background: url('../img/comp/grey.jpg');
+    background: url('../img/patterns/grey.jpg');
     color: $theme-primary;
 }
 
 .bg-dark {
     background-color: $theme-dark;
-    background-image: url('../img/comp/footer_lodyas.png');
+    background-image: url('../img/patterns/lodyas.png');
     color: white;
 }
 
