WIP Frontpage Portfolio

--- a/_includes/about-followup.html
+++ b/_includes/about-followup.html
@@ -1,4 +1,4 @@
-<section class="bg-dark relative" id="about-followup">
+<section class="bg-dark border-extra-dark-top border-extra-dark-bottom relative" id="about-followup">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 text-center">
