--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,11 +1,15 @@
-<section id="contact">
+<section id="contact" class="bg-light">
     <div class="container">
         
         <div class="row">
-            <div class="col-sm-4 col-sm-offset-6 text-center" style="background: white; padding: 25px;">
-                <h2 class="section-heading">Let's Get In Touch!</h2>
-                <hr class="primary">
-                <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+            <div class="col-lg-8 col-lg-offset-2 text-center">
+                <h2 class="section-heading">STUB STUB STUB</h2>
+                <hr class="-light">
+                <p class="text-faded">
+                    Ready to start your next project with us? That's great! 
+                    Give us a call or send us an email and we will get back 
+                    to you as soon as possible!
+                </p>
             </div>
     <!--        
         <div class="col-lg-3 col-lg-offset-2 text-center">
