--- a/_layouts/front.html
+++ b/_layouts/front.html
@@ -9,10 +9,13 @@
   {% include about.html %}
   {% include testimony-homeaway.html %}
   {% include about-followup.html %}
+  
   {% comment %}
   {% include services.html %}
+  {% endcomment %}
   {% include portfolio.html %}
-  {% include aside.html %} 
+  {% comment %}
+  {% include aside.html %}   
   {% endcomment %}
   {% include contact.html %}
   {% include scripts.html %}
