--- a/_includes/portfolio.html
+++ b/_includes/portfolio.html
@@ -1,21 +1,95 @@
 <section class="no-padding" id="portfolio">
     <div class="container-fluid">
         <div class="row no-gutter">
-            <div class="col-lg-4 col-sm-6">
-                <a href="#" class="portfolio-box">
-                    <img src="{{page.leadingpath}}img/portfolio/1.jpg" class="img-responsive" alt="">
-                    <div class="portfolio-box-caption">
-                        <div class="portfolio-box-caption-content">
-                            <div class="project-category text-faded">
-                                Category
-                            </div>
-                            <div class="project-name">
-                                Project Name
-                            </div>
+            <div class="col-lg-4 col-sm-6 portfolio-popin">
+                <a href="#">
+                    <div class="logo">
+                        <img src="{{page.leadingpath}}img/external/portfolio/dropoff_blank.png" class="blank img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/dropoff_normal.png" class="normal img-responsive" alt="">
+                    </div>
+                    
+                    <div class="caption">
+                        <div class="project-category">
+                            Going to Market
                         </div>
                     </div>
                 </a>
             </div>
+            <div class="col-lg-4 col-sm-6 portfolio-popin">
+                <a href="#">
+                    <div class="logo">
+                        <img src="{{page.leadingpath}}img/external/portfolio/silvercar_blank.png" class="blank img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/silvercar_normal.png" class="normal img-responsive" alt="">
+                    </div>
+                    
+                    <div class="caption">
+                        <div class="project-category">
+                            Upping the Android Game
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6 portfolio-popin">
+                <a href="#">
+                    <div class="logo">
+                        <img src="{{page.leadingpath}}img/external/portfolio/adidas_blank.png" class="blank img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/adidas_normal.png" class="normal img-responsive" alt="">
+                    </div>
+                    
+                    <div class="caption">
+                        <div class="project-category">
+                            Partner in Idea Development
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row no-gutter">
+            <div class="col-lg-4 col-sm-6 portfolio-popin">
+                <a href="#">
+                    <div class="logo">
+                        <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_blank.png" class="blank img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/docbookmd_normal.png" class="normal img-responsive" alt="">
+                    </div>
+                    
+                    <div class="caption">
+                        <div class="project-category">
+                            Compliance and Business Rules
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6 portfolio-popin">
+                <a href="#">
+                    <div class="logo">
+                        <img src="{{page.leadingpath}}img/external/portfolio/homeaway_blank.png" class="blank img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/homeaway_normal.png" class="normal img-responsive" alt="">
+                    </div>
+                    
+                    <div class="caption">
+                        <div class="project-category">
+                            Android Experts
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-lg-4 col-sm-6 portfolio-popin">
+                <a href="#">
+                    <div class="logo">
+                        <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_blank.png" class="blank img-responsive" alt="">
+                        <img src="{{page.leadingpath}}img/external/portfolio/honestdollar_normal.png" class="normal img-responsive" alt="">
+                    </div>
+                    
+                    <div class="caption">
+                        <div class="project-category">
+                            Android Experts
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+            
+            <!--
             <div class="col-lg-4 col-sm-6">
                 <a href="#" class="portfolio-box">
                     <img src="{{page.leadingpath}}img/portfolio/2.jpg" class="img-responsive" alt="">
@@ -93,4 +167,5 @@
             </div>
         </div>
     </div>
+-->
 </section>
