--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -1,4 +1,4 @@
-<section class="bg-white relative external-homeaway notop nobottom-xs" id="testimony">
+<section class="relative external-homeaway notop nobottom-xs" id="testimony">
     <div class="container">
         <div class="row">
             <div class="col-md-5 col-md-offset-2 testimony">
