Clarified Mobile Testimony Flow w/ Triangle

--- a/_includes/testimony-homeaway.html
+++ b/_includes/testimony-homeaway.html
@@ -14,6 +14,9 @@
                 </p>
             </div>
             <div class="col-md-3 col-md-offset-0 signature wow slideInDown">
+                <div class="triangle visible-xs-block"></div>
+                <div class="spacer"></div>
+                
                 <h2>Alex Devine</h2>
                 <h5>Director of Engineering, Mobile</h5>
                 <img src="{{page.leadingpath}}img/external/logo-homeaway.svg" />
