--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,6 +30,9 @@
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
+                <li>
+                    <a target="_blank" href="http://volny.github.io/creative-theme-jekyll/">Template</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
